welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if (ado(a) == ado(b)) {return false} else {return true}
}
  
def ado(a:Int) = {
  if ((a>=13)&&(a<=19)) {return true} else {return false}
}